# Slic

./: CMakeLists.txt  README.md  Slic.cpp  Slic.h  main.cpp
